--- a/barryscommute.html
+++ b/barryscommute.html
@@ -11,5 +11,5 @@
     
 <img src="images/barryswildtraintrip.jpeg" width="250" height="150" class=center>
     <p3> you can choose to have Barry return to work instead of continuing his adventure.<a href="barrygoeswork.html">click here </a> or</p3>
-    <p4>you can choose for barry to get off and go for a walk.<a href="barryswalk.html">click here</a></p4>
+    <p4>you can choose for barry to get off and go for a walk.<a href="barrysexoticwalk.html">click here</a></p4>
     
